# tankerkoenig-rs

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: cargo_publish.yml  ci.yml  coverage.yml  main.yml  pr.yml  release.yml  test.yml
docs/: search-index.js
docs/src/tankerkoenig/: error.rs.html  lib.rs.html  utils.rs.html
docs/tankerkoenig/: all.html  index.html  sidebar-items.js
docs/tankerkoenig/api/: index.html  sidebar-items.js  struct.Settings.html
docs/tankerkoenig/models/: enum.Fuel.html  index.html  sidebar-items.js
examples/: prices.rs  prices_multiple.rs  station_details.rs  stations_near.rs  stations_near_with_fuel.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
search.desc/tankerkoenig/: tankerkoenig-desc-0-.js
src/: error.rs  lib.rs  utils.rs
src/api/: client.rs  mod.rs  price.rs  station.rs  url.rs
src/models/: mod.rs  price.rs  station.rs
src/tankerkoenig/: error.rs.html  lib.rs.html  utils.rs.html
src/tankerkoenig/api/: client.rs.html  mod.rs.html  price.rs.html  station.rs.html  url.rs.html
src/tankerkoenig/models/: mod.rs.html  price.rs.html  station.rs.html
tankerkoenig/: all.html  enum.Error.html  index.html  macro.chunk_into_option_arrays!.html  macro.chunk_into_option_arrays.html  sidebar-items.js
tankerkoenig/api/: index.html  sidebar-items.js  struct.Settings.html  struct.Tankerkoenig.html
tankerkoenig/api/price/: index.html  sidebar-items.js  struct.PriceApi.html
tankerkoenig/api/station/: index.html  sidebar-items.js  struct.StationApi.html
tankerkoenig/error/: enum.TankerkoenigError.html
tankerkoenig/models/: enum.Fuel.html  enum.Sort.html  index.html  sidebar-items.js
tankerkoenig/models/price/: index.html  sidebar-items.js  struct.PriceResponse.html  struct.StationPrices.html
tankerkoenig/models/station/: index.html  sidebar-items.js  struct.AreaFuelResponse.html  (+6 more)
test/data/: detail.json  list.json  list_near.json  prices.json
(+53 files in other folders)
