[package]
name = "tankerkoenig"
author = "Jontze <dev@jontze.com>"
description = "API wrapper for the tankerkoenig api"
version = "0.1.0-rc.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jontze/tankerkoenig-rs"
repository = "https://github.com/jontze/tankerkoenig-rs"
documentation = "https://docs.rs/tankerkoenig"
readme = "README.md"
keywords = ["api-wrapper", "tankerkoenig", "api", "fuel"]
categories = ["api-bindings"]
exclude = [
    ".github/",
]

[dependencies]
thiserror = "1.0.30"
serde_json = "1.0.72"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.7" 
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "1.19.2"
features = ["rt", "macros"]

